tests/pass/0066_while_nothing_is_falsy.ee
fn main() {
    while (nothing) {
        print(1);
    }
    print(2);
}
