tests/fail/0003_nothing_arithmetic.ee
fn main() {
    print(nothing * 2);
}
